syntax = "proto3";

package com.numo.proto;

option java_multiple_files = true;
option java_package = "com.numo.proto";
option java_outer_classname = "AuthenticationProto";

service AuthenticationService {
  rpc SendConfirmationCode (SendConfirmationCodeRequest) returns (SendConfirmationCodeResponse) {
  }
  rpc VerifyPhoneNumber (VerifyPhoneNumberRequest) returns (VerifyPhoneNumberResponse) {
  }
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {
  }
  rpc SignIn (SignInRequest) returns (SignInResponse) {
  }
}

message SendConfirmationCodeRequest {
  string phoneNumber = 1;
}

message SendConfirmationCodeResponse {
}

message VerifyPhoneNumberRequest {
  string phoneNumber = 1;
  string confirmationCode = 2;
}

message VerifyPhoneNumberResponse {
}

message SignUpRequest {
  string phoneNumber = 1;
  string password = 2;
  Gender gender = 3;
  uint32 weight = 4;
  PhysicalFitness physicalFitness = 5;
}

message SignUpResponse {
}

message SignInRequest {
  string phoneNumber = 1;
  string password = 2;
}

message SignInResponse {
  string accessToken = 1;
  uint64 expiresIn = 2;
  string tokenType = 3;
  string refreshToken = 4;
  string idToken = 5;
}

enum Gender {
  MALE = 0;
  FEMALE = 1;
}

enum PhysicalFitness {
  BEGINNER = 0;
  MODERATE = 1;
  EXPERIENCED = 2;
}
