syntax = "proto3";

package com.numo.proto;

option java_multiple_files = true;
option java_package = "com.numo.proto";
option java_outer_classname = "UserProto";

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {
  }
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
  }
}

message GetUserRequest {
}

message GetUserResponse {
  string email = 1;
  string name = 2;
  Gender gender = 3;
  uint32 age = 4;
  uint32 weight = 5;
  PhysicalFitness physicalFitness = 6;
}

message UpdateUserRequest {
  string name = 1;
  Gender gender = 2;
  uint32 age = 3;
  uint32 weight = 4;
  PhysicalFitness physicalFitness = 5;
}

message UpdateUserResponse {
  string email = 1;
  string name = 2;
  Gender gender = 3;
  uint32 age = 4;
  uint32 weight = 5;
  PhysicalFitness physicalFitness = 6;
}

enum Gender {
  GENDER_UNSPECIFIED = 0;
  MALE = 1;
  FEMALE = 2;
}

enum PhysicalFitness {
  PHYSICAL_FITNESS_UNSPECIFIED = 0;
  BEGINNER = 1;
  MODERATE = 2;
  EXPERIENCED = 3;
}
